@@ -7,6 +7,7 @@
  */
 package io.camunda.zeebe.engine.processing.batchoperation;
 
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
@@ -17,6 +18,7 @@ import io.camunda.search.filter.ProcessInstanceFilter;
 import io.camunda.search.query.IncidentQuery;
 import io.camunda.search.query.ProcessInstanceQuery;
 import io.camunda.search.query.SearchQueryResult;
+import io.camunda.security.auth.Authentication;
 import io.camunda.security.configuration.ConfiguredUser;
 import io.camunda.zeebe.engine.util.EngineRule;
 import io.camunda.zeebe.protocol.impl.encoding.MsgPackConverter;
@@ -36,7 +38,9 @@ import java.util.Map;
 import java.util.Set;
 import java.util.UUID;
 import java.util.stream.Collectors;
+import org.agrona.DirectBuffer;
 import org.agrona.concurrent.UnsafeBuffer;
+import org.junit.Before;
 import org.junit.Rule;
 import org.mockito.Mockito;
 
@@ -62,40 +66,66 @@ abstract class AbstractBatchOperationTest {
           .withIdentitySetup()
           .withSecurityConfig(cfg -> cfg.getAuthorizations().setEnabled(true))
           .withSecurityConfig(cfg -> cfg.getInitialization().setUsers(List.of(DEFAULT_USER)))
+          .withSecurityConfig(
+              cfg ->
+                  cfg.getInitialization()
+                      .getDefaultRoles()
+                      .put("admin", Map.of("users", List.of(DEFAULT_USER.getUsername()))))
           .withSearchClientsProxy(searchClientsProxy);
 
+  @Before
+  public void setUp() {
+    when(searchClientsProxy.withSecurityContext(any())).thenReturn(searchClientsProxy);
+  }
+
   protected long createNewCancelProcessInstanceBatchOperation(final Set<Long> itemKeys) {
+    return createNewCancelProcessInstanceBatchOperation(itemKeys, null);
+  }
+
+  protected long createNewCancelProcessInstanceBatchOperation(
+      final Set<Long> itemKeys, final Map<String, Object> claims) {
     final var result =
         new SearchQueryResult.Builder<ProcessInstanceEntity>()
             .items(
-                itemKeys.stream().map(this::mockProcessInstanceEntity).collect(Collectors.toList()))
+                itemKeys.stream().map(this::fakeProcessInstanceEntity).collect(Collectors.toList()))
             .total(itemKeys.size())
             .build();
-    Mockito.when(searchClientsProxy.searchProcessInstances(Mockito.any(ProcessInstanceQuery.class)))
+
+    when(searchClientsProxy.searchProcessInstances(Mockito.any(ProcessInstanceQuery.class)))
         .thenReturn(result);
 
     final var filterBuffer =
         convertToBuffer(
             new ProcessInstanceFilter.Builder().processInstanceKeys(1L, 3L, 8L).build());
 
+    DirectBuffer authenticationBuffer = null;
+    if (claims != null) {
+      authenticationBuffer = convertToBuffer(Authentication.of(b -> b.claims(claims)));
+    }
+
     return engine
         .batchOperation()
         .newCreation(BatchOperationType.CANCEL_PROCESS_INSTANCE)
         .withFilter(filterBuffer)
+        .withAuthentication(authenticationBuffer)
         .create(DEFAULT_USER.getUsername())
         .getValue()
         .getBatchOperationKey();
   }
 
   protected long createNewModifyProcessInstanceBatchOperation(
-      final Set<Long> itemKeys, final String sourceElementId, final String targetElementId) {
+      final Set<Long> itemKeys,
+      final String sourceElementId,
+      final String targetElementId,
+      final Map<String, Object> claims) {
     final var result =
         new SearchQueryResult.Builder<ProcessInstanceEntity>()
             .items(
-                itemKeys.stream().map(this::mockProcessInstanceEntity).collect(Collectors.toList()))
+                itemKeys.stream().map(this::fakeProcessInstanceEntity).collect(Collectors.toList()))
             .total(itemKeys.size())
             .build();
-    Mockito.when(searchClientsProxy.searchProcessInstances(Mockito.any(ProcessInstanceQuery.class)))
+
+    when(searchClientsProxy.searchProcessInstances(Mockito.any(ProcessInstanceQuery.class)))
         .thenReturn(result);
 
     final var filterBuffer = convertToBuffer(new ProcessInstanceFilter.Builder().build());
@@ -107,10 +137,16 @@ abstract class AbstractBatchOperationTest {
     mappingInstruction.setTargetElementId(targetElementId);
     modificationPlan.addMoveInstruction(mappingInstruction);
 
+    DirectBuffer authenticationBuffer = null;
+    if (claims != null) {
+      authenticationBuffer = convertToBuffer(Authentication.of(b -> b.claims(claims)));
+    }
+
     return engine
         .batchOperation()
         .newCreation(BatchOperationType.MODIFY_PROCESS_INSTANCE)
         .withFilter(filterBuffer)
+        .withAuthentication(authenticationBuffer)
         .withModificationPlan(modificationPlan)
         .create(DEFAULT_USER.getUsername())
         .getValue()
@@ -118,7 +154,7 @@ abstract class AbstractBatchOperationTest {
   }
 
   protected long createNewFailedCancelProcessInstanceBatchOperation() {
-    Mockito.when(searchClientsProxy.searchProcessInstances(Mockito.any(ProcessInstanceQuery.class)))
+    when(searchClientsProxy.searchProcessInstances(Mockito.any(ProcessInstanceQuery.class)))
         .thenThrow(new RuntimeException("You are playing with fire!"));
 
     final var filterBuffer =
@@ -136,16 +172,16 @@ abstract class AbstractBatchOperationTest {
   }
 
   protected long createNewResolveIncidentsBatchOperation(
-      final Map<Long, Set<Long>> piAndIncidentKeys) {
+      final Map<Long, Set<Long>> piAndIncidentKeys, final Map<String, Object> claims) {
     final var processInstanceResult =
         new SearchQueryResult.Builder<ProcessInstanceEntity>()
             .items(
                 piAndIncidentKeys.keySet().stream()
-                    .map(this::mockProcessInstanceEntity)
+                    .map(this::fakeProcessInstanceEntity)
                     .collect(Collectors.toList()))
             .total(piAndIncidentKeys.size())
             .build();
-    Mockito.when(searchClientsProxy.searchProcessInstances(Mockito.any(ProcessInstanceQuery.class)))
+    when(searchClientsProxy.searchProcessInstances(Mockito.any(ProcessInstanceQuery.class)))
         .thenReturn(processInstanceResult);
     final var incidentKeys =
         piAndIncidentKeys.values().stream().flatMap(Set::stream).collect(Collectors.toSet());
@@ -161,26 +197,32 @@ abstract class AbstractBatchOperationTest {
         convertToBuffer(
             new ProcessInstanceFilter.Builder().processInstanceKeys(1L, 3L, 8L).build());
 
+    DirectBuffer authenticationBuffer = null;
+    if (claims != null) {
+      authenticationBuffer = convertToBuffer(Authentication.of(b -> b.claims(claims)));
+    }
+
     return engine
         .batchOperation()
         .newCreation(BatchOperationType.RESOLVE_INCIDENT)
         .withFilter(filterBuffer)
+        .withAuthentication(authenticationBuffer)
         .create(DEFAULT_USER.getUsername())
         .getValue()
         .getBatchOperationKey();
   }
 
   protected long createNewMigrateProcessesBatchOperation(
-      final Set<Long> itemKeys,
+      final List<Long> itemKeys,
       final long targetProcessDefinitionId,
-      final Map<String, String> mappingInstructions) {
+      final Map<String, String> mappingInstructions,
+      final Map<String, Object> claims) {
     final var result =
         new SearchQueryResult.Builder<ProcessInstanceEntity>()
-            .items(
-                itemKeys.stream().map(this::mockProcessInstanceEntity).collect(Collectors.toList()))
+            .items(itemKeys.stream().map(this::fakeProcessInstanceEntity).toList())
             .total(itemKeys.size())
             .build();
-    Mockito.when(searchClientsProxy.searchProcessInstances(Mockito.any(ProcessInstanceQuery.class)))
+    when(searchClientsProxy.searchProcessInstances(Mockito.any(ProcessInstanceQuery.class)))
         .thenReturn(result);
 
     final var filterBuffer = convertToBuffer(new ProcessInstanceFilter.Builder().build());
@@ -198,10 +240,16 @@ abstract class AbstractBatchOperationTest {
             })
         .forEach(migrationPlan::addMappingInstruction);
 
+    DirectBuffer authenticationBuffer = null;
+    if (claims != null) {
+      authenticationBuffer = convertToBuffer(Authentication.of(b -> b.claims(claims)));
+    }
+
     return engine
         .batchOperation()
         .newCreation(BatchOperationType.MIGRATE_PROCESS_INSTANCE)
         .withFilter(filterBuffer)
+        .withAuthentication(authenticationBuffer)
         .withMigrationPlan(migrationPlan)
         .create(DEFAULT_USER.getUsername())
         .getValue()
@@ -212,10 +260,22 @@ abstract class AbstractBatchOperationTest {
     return new UnsafeBuffer(MsgPackConverter.convertToMsgPack(object));
   }
 
-  protected ProcessInstanceEntity mockProcessInstanceEntity(final long processInstanceKey) {
-    final var entity = mock(ProcessInstanceEntity.class);
-    when(entity.processInstanceKey()).thenReturn(processInstanceKey);
-    return entity;
+  protected ProcessInstanceEntity fakeProcessInstanceEntity(final long processInstanceKey) {
+    return new ProcessInstanceEntity(
+        processInstanceKey,
+        null,
+        null,
+        -1,
+        null,
+        -1L,
+        -1L,
+        -1L,
+        null,
+        null,
+        null,
+        false,
+        null,
+        null);
   }
 
   protected IncidentEntity mockIncidentEntity(final long incidentKey) {
@@ -244,6 +304,19 @@ abstract class AbstractBatchOperationTest {
         .withOwnerId(user.getUsername())
         .withOwnerType(AuthorizationOwnerType.USER)
         .withResourceType(AuthorizationResourceType.BATCH_OPERATION)
+        .withResourceId("*")
+        .create(DEFAULT_USER.getUsername());
+  }
+
+  protected void addProcessDefinitionPermissionsToUser(
+      final UserRecordValue user, final PermissionType permissionType) {
+    engine
+        .authorization()
+        .newAuthorization()
+        .withPermissions(permissionType)
+        .withOwnerId(user.getUsername())
+        .withOwnerType(AuthorizationOwnerType.USER)
+        .withResourceType(AuthorizationResourceType.PROCESS_DEFINITION)
         .withResourceId("*")
         .create(DEFAULT_USER.getUsername());
   }
